--- a/fifty-fifty/src/App.css
+++ b/fifty-fifty/src/App.css
@@ -1,16 +1,103 @@
-.btn--wrapper {
+.topper {
+  margin-top: 7rem;
+  margin-bottom: -9rem;
   display: flex;
+  justify-content: center;
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: antiquewhite;
+}
+
+.btn {
+  padding: 0.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2.5rem;
+  width: 5rem;
+  margin-top: 1rem;
+  border-radius: 10%;
+}
+
+.btn-more {
+  background-color: rgb(0, 92, 61);
+}
+
+.btn-less {
+  background-color: rgb(255, 0, 34);
+}
+
+.btn--wrapper {
+  cursor: default;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   align-items: center;
   justify-content: center;
   gap: 10px;
 }
-.submit--button {
+
+.btn--wrapper-btn {
+  gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.points {
+  margin-bottom: 50px;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.again {
+  cursor: pointer;
+  padding: 5px;
+  border: 2px solid rgb(33, 33, 48);
+  border-radius: 10%;
+  font-weight: 600;
+}
+
+.label {
+  background-color: rgb(16, 16, 34);
+  border-radius: 10%;
   padding: 20px;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  width: 15em;
+  width: 15rem;
   height: 15rem;
-  border: 1px solid gray;
+  border: 1px solid rgb(36, 36, 36);
+  border-radius: 10%;
+  box-shadow: -5px 5px 10px rgb(7, 7, 17);
+}
+
+.submit--button {
+  cursor: pointer;
+  transform: scale(1);
+  transition: all 0.3s;
+}
+
+.submit--button:hover,
+.submit--button:focus {
+  transform: scale(1.05);
+  transition: all 0.1s;
+}
+
+.submit--transition {
+  z-index: 2;
+  animation: submit--transition 1s;
+}
+
+@keyframes submit--transition {
+  0% {
+    transform: translate(315px);
+    opacity: 0%;
+  }
+  100% {
+    transform: translate(0);
+    opacity: 100%;
+  }
 }
