--- a/fifty-fifty/src/index.css
+++ b/fifty-fifty/src/index.css
@@ -3,6 +3,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: antiquewhite;
+  background-color: rgb(13, 13, 29);
 }
